Fix sizing on smaller desktop

--- a/style.css
+++ b/style.css
@@ -16,21 +16,21 @@ body {
 /*navbar*/
 nav {
     position: fixed;
-    top: 45px;
-    right: 45px;
-    width: 30%;
+    top: 3%;
+    right: 3%;
+    width: 35vw;
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 20px;
+    font-size: 1.2rem;
     font-weight: bold;
 }
 a {
     text-decoration: none;
 }
 #git-icon {
-    height: 40px;
-    width: 40px;
+    height: 2.5rem;
+    width: 2.5rem;
 }
 .nav-links {
     color: var(--pink);
@@ -41,25 +41,25 @@ a {
 /*UI Elements*/
 .ui-left {
     position: fixed;
-    bottom: 25px;
-    left: 25px;
+    bottom: 3%;
+    left: 3%;
 }
 .ui-right {
     position: fixed;
-    bottom: 25px;
-    right: 25px;
+    bottom: 3%;
+    right: 3%;
 }
 .ui-left svg,
 .ui-right svg {
-    width: 50px;
-    height: 50px;
+    width: 3rem;
+    height: 3rem;
 }
 /*Up Down Controls*/
 .up-button svg,
 .down-button svg {
     color: var(--pink);
-    height: 80px;
-    width: 80px;
+    height: 6rem;
+    width: 6rem;
 }
 .up-button {
     position: relative;
@@ -86,43 +86,43 @@ a {
 /*About Me, Why Dev*/
 .section-layout {
     height: 100vh;
-    width: 50%;
+    width: 60vw;
     margin: auto;
     display: flex;
     align-items: center;
 }
 .outer-container {
-    height: 50vh;
+    height: 60vh;
 }
 .container {
     display: flex;
     width: 100%;
-    height: 40vh;
+    height: 60vh;
     flex-direction: column;
     justify-content: space-evenly;
 }
 #hero {
-    font-size: 72px;
+    font-size: 4rem;
     font-weight: bold;
     line-height: 1.5;
 }
 #about-me h2,
 #why-dev h2,
 #project-links h2 {
-    font-size: 40px;
+    font-size: 2rem;
     font-weight: bold;
 }
 #about-me p,
 #why-dev p {
-    font-size: 20px;
+    font-size: 1rem;
     line-height: 1.75;
 }
 .inner-content {
     display: flex;
 }
 #img-div {
-    height: 350px;
-    width: 300px;
+    height: 35vh;
+    width: 20vw;
     margin-left: 5%;
     align-self: center;
 }
@@ -163,10 +163,10 @@ img {
 }
 .card button {
     width: 100%;
-    height: 175px;
+    height: 15vh;
     margin-bottom: 10%;
     background-color: var(--dark-grey);
-    font-size: 28px;
+    font-size: 1.2rem;
     font-weight: bold;
     letter-spacing: 1px;
     padding: 10px;
@@ -183,6 +183,6 @@ img {
     cursor: pointer;
 }
 .card p {
-    font-size: 18px;
+    font-size: 0.8rem;
     line-height: 1.5;
 }
